dando mantenimiento a la web

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- estilos css -->
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
-    <link id="theme" rel="stylesheet" type="text/css" href="css/green.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+    <link id="theme" rel="stylesheet" type="text/css" href="../css/green.css" />
 
     <!-- estilos de bxSlider -->
     <link
@@ -24,7 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script>
 
     <!-- javascript -->
-    <script src="./js/main.js"></script>
+    <script src="../js/main.js"></script>
 
     <!-- Plugin validacion -->
 
@@ -61,10 +61,10 @@
 
         <nav id="menu">
           <ul>
-            <li><a href="about.html">Inicio</a></li>
-            <li><a href="about.html">Sobre mi</a></li>
-            <li><a href="clock.html">Reloj</a></li>
-            <li><a href="contact.html">Contacto</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="./about.html">Sobre mi</a></li>
+            <li><a href="./clock.html">Reloj</a></li>
+            <li><a href="./contact.html">Contacto</a></li>
           </ul>
         </nav>
       </header>
@@ -78,13 +78,13 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/hojas.jpg" class="d-block w-100" alt="..." />
+            <img src="../img/hojas.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="./img/cielo.jpg" class="d-block w-100" alt="..." />
+            <img src="../img/cielo.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="./img/rojo.jpg" class="d-block w-100" alt="..." />
+            <img src="../img/rojo.jpg" class="d-block w-100" alt="..." />
           </div>
         </div>
         <button
@@ -116,7 +116,7 @@
         <aside id="sidebar">
           <div id="about">
             <h4><span>Acerca de mi.</span></h4>
-            <img src="./img/caracol.jpg" />
+            <img src="../img/caracol.jpg" />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
               maximus lorem sit amet libero accumsan, ac ultricies odio
