--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link id="theme" rel="stylesheet" type="text/css" href="css/green.css" />
 
+    <!-- Bootstrap css -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+
     <!-- estilos de bxSlider -->
     <link
       rel="stylesheet"
@@ -37,6 +41,9 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+ <!-- bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 
     <title>Inicio</title>
   </head>
@@ -59,10 +66,10 @@
 
         <nav id="menu">
           <ul>
-            <li><a href="about.html">Inicio</a></li>
-            <li><a href="about.html">Sobre mi</a></li>
-            <li><a href="clock.html">Reloj</a></li>
-            <li><a href="contact.html">Contacto</a></li>
+            <li><a href="pages/about.html">Inicio</a></li>
+            <li><a href="pages/about.html">Sobre mi</a></li>
+            <li><a href="pages/clock.html">Reloj</a></li>
+            <li><a href="pages/contact.html">Contacto</a></li>
           </ul>
         </nav>
       </header>
@@ -103,8 +110,8 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-      <!-- <div id="slider">
+<!-- 
+      <div id="slider">
         <div class="galeria">
           <div><img src="./img/hojas.jpg" title="Hojas" /></div>
           <div><img src="./img/cielo.jpg" title="cielo" /></div>
